--- a/style.css
+++ b/style.css
@@ -756,6 +756,14 @@ body .max-width-576px {
       background-color: rgb(255,255,255, .60);
       backdrop-filter: blur(5px);
    }
+
+   .contactContainer {
+      display: flex!;
+      position: relative;
+      left: 0 !important; /* Full width for contact on mobile */
+      width: 100vw;
+      height: 100vh;
+   }
 }
 
 /* ABOUT PAGE CLASSES END */
